bdr.BDR2.scala.error
Erreur de compilation :
BDR2:1: error: not found: value fin
fin=false
^BDR2:3: error: not found: value fin
while (fin == false) {
       ^BDR2:20: error: not found: value fin
    case _ => fin = true
              ^